--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,11 +52,6 @@
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
             <hr>
             <div class="media" th:each="question : ${questionList}">
-                <tr th:each="prod : ${prods}">
-                    <td th:text="${prod.name}">Onions</td>
-                    <td th:text="${prod.price}">2.41</td>
-                    <td th:text="${prod.inStock}? #{true} : #{false}">yes</td>
-                </tr>
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-circle" th:src="${question.user.avatarUrl}">
@@ -64,9 +59,11 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.title}"></h4>
-
+                    <span th:text="${question.description}" ></span>
                     <br/>
-                    <span class="test-desc">点击数</span>
+                    <span class="test-desc">
+                        <span th:text="${question.commentCount}"></span>个回复·
+                        <span th:text="${question.viewCount}"></span>次浏览·<span th:text="${#dates.format(question.gmtCreate,'dd MMMM yyyy')}"></span></span>
                 </div>
             </div>
         </div>
