--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
             <hr>
-            <div class="media" th:each="question : ${questionList}">
+            <div class="media" th:each="question : ${paginationDto.questions}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-circle" th:src="${question.user.avatarUrl}">
@@ -63,9 +63,36 @@
                     <br/>
                     <span class="test-desc">
                         <span th:text="${question.commentCount}"></span>个回复·
-                        <span th:text="${question.viewCount}"></span>次浏览·<span th:text="${#dates.format(question.gmtCreate,'dd MMMM yyyy')}"></span></span>
+                        <span th:text="${question.viewCount}"></span>次浏览·<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm:ss')}"></span></span>
                 </div>
             </div>
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    <li th:if="${paginationDto.showFirstPage}">
+                        <a href="/?page=1" aria-label="Previous">
+                            <span aria-hidden="true">&lt;&lt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${paginationDto.showPrevious}">
+                        <a th:href="@{/(page=${paginationDto.page} - 1)}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+                    <li th:each="page : ${paginationDto.pages}" th:class="${paginationDto.page == page} ? 'active':''">
+                        <a th:href="@{/(page=${page})}" th:text="${page}"></a>
+                    </li>
+                    <li th:if="${paginationDto.showNext}">
+                        <a th:href="@{/(page=${paginationDto.page} + 1)}"  aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${paginationDto.showEndPage}">
+                        <a th:href="@{/(page=${paginationDto.totalPage})}" aria-label="Previous">
+                            <span aria-hidden="true">&gt;&gt;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h3>热门话题</h3>
